button contrast fixes

--- a/styles/snapchat-web/catppuccin.user.css
+++ b/styles/snapchat-web/catppuccin.user.css
@@ -74,7 +74,7 @@
       --sigOverlayHover: fade(@overlay0, 0.35);
 
       --sigTextPrimary: @text;
-      --sigButtonOnPrimary: @text;
+      --sigButtonOnPrimary: @crust;
       --sigTextSecondary: @subtext0;
       --sigButtonOnSecondary: @subtext0;
       --sigTextTertiary: @subtext1;
@@ -103,6 +103,10 @@
       --sigChatIcon: @blue;
       --sigSnapWithoutSound: @red;
       --sigSnapWithSound: @mauve;
+    }
+
+    path[fill="#fff"] {
+      fill: @crust;
     }
   }
 
